<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PrivatePe</string>
    <string name="facebook_app_id">527156878596329</string>
    <string name="comEmail"><u>rechargeissue22@gmail.com</u></string>
    <string name="you_wil_get">You wil get several Video Chat Cards after</string>
    <string name="str_how_does_it_feel">How does it feel to video chat \with her？</string>
    <string name="app_id">adc68b17ece34cc7bc18bc3db3eeb678</string>
    <string name="app_id_rtm">4e357f61af58410992a80b8d4bf0fa84</string>
    <string name="description">RTM Chat RtmNotification enabled</string>
    <string name="album" tools:ignore="ExtraTranslation">Album</string>
    <string name="shared_preference">ProfileImage</string>
    <string name="shared_preference_login">LoginDataMember</string>
    <string name="img_url">Image</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="join_button">Join</string>
    <string name="leave_button">Leave</string>
    <string name="send_peer_msg_button">Peer MSG</string>
    <string name="send_channel_msg_button">Group MSG</string>
    <string name="uid">Enter your uid</string>
    <string name="msg">Enter your message</string>
    <string name="channel_name">Channel name</string>
    <string name="peer_name">Peer name</string>
    <string name="pick_image_intent_text">Choose Image</string>
    <string name="notification_description">Downloading</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="filter">filter</string>
    <string name="country">Country</string>
    <string name="balance_less">When your balance is less than 1500 diamonds, Level will become Lv0</string>
    <string name="lbl_set_profile_photo">Set profile photo</string>
    <string name="lbl_take_camera_picture">Take camera picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="invitation_yes">Yes</string>
    <string name="invitation_del_no">No</string>
    <string name="toast_image_intent_null">Null</string>
    <string name="about_desc"> Please fill in the correct account information, or your withdrawal will be affected.</string>
    <string name="about_inbox">Don\'t disclose sensitive info while chatting, beware \nof scams</string>
    <string name="notice_tv1">Withdrawal minimum for per transaction: $10</string>
    <string name="notice_tv2">Tax for per transaction:: \n When withdrawal amount is less than $50,$1 tax \n will be deducted.</string>
    <string-array name="searchWordsArray">
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
        <item>five</item>
        <item>six</item>
        <item>seven</item>
        <item>eight</item>
        <item>nine</item>
        <item>ten</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>mobile</item>
        <item>number</item>
        <item>phone</item>
        <item>nu</item>
        <item>no</item>
        <item>fuck</item>
        <item>whatsapp</item>
        <item>facebook</item>
    </string-array>
    <string-array name="bankArray">
        <item>Airtel Payments Bank Limited</item>
        <item>Akola Janata Commercial Cooperative Bank</item>
        <item>Allahabad Bank</item>
        <item>Almora Urban Cooperative Bank Limited</item>
        <item>Ambarnath Jaihind Cooperative Bank Limited, Ambarnath</item>
        <item>Andhra Bank","Andhra Pragathi Grameena Bank</item>
        <item>Andhra Pradesh Grameena Vikas Bank</item>
        <item>Apna Sahakari Bank Limited</item>
        <item>Arvind Sahakari Bank Ltd</item>
        <item>Australia and New Zealand Banking Group Limited</item>
        <item>AU Small Finance Bank Limited</item>
        <item>Axis Bank</item>
        <item>Bandhan Bank Limited</item>
        <item>Bank of America</item>
        <item>Bank of Bahrein and Kuwait</item>
        <item>Bank of Baroda</item>
        <item>Bank of Ceylon</item>
        <item>Bank of India</item>
        <item>Bank of Maharashtra</item>
        <item>Barclays Bank</item>
        <item>Bassein Catholic Cooperative Bank Limited</item>
        <item>Bhagini Nivedita Sahakari Bank Limited, Pune</item>
        <item>Bharat Cooperative Bank Mumbai Limited</item>
        <item>Bombay Mercantile Cooperative Bank Ltd</item>
        <item>BNP Paribas Bank</item>
        <item>Canara Bank</item>
        <item>Capital Small Finance Bank Limited</item>
        <item>Central Bank of India</item>
        <item>CITI Bank</item>
        <item>Citizencredit Cooperative Bank Limited</item>
        <item>City Union Bank Limited</item>
        <item>Coastal Local Area Bank Ltd</item>
        <item>Corporation Bank</item>
        <item>Credit Agricole Corporate and Investment Bank</item>
        <item>Credit Suisse AG</item>
        <item>CSB Bank Limited</item>
        <item>CTBC Bank Co Limited</item>
        <item>DBS Bank India Limited</item>
        <item>DCB Bank Limited</item>
        <item>Deogiri Nagari Sahakari Bank Limited, Aurangabad</item>
        <item>Dena Bank</item>
        <item>Deposit Insurance and Credit Guarantee Corporation</item>
        <item>Deustche Bank</item>
        <item>Dhanalakshmi Bank</item>
        <item>DMK Jaoli Bank</item>
        <item>Doha Bank QSC</item>
        <item>Dombivli Nagari Sahakari Bank Limited</item>
        <item>Durgapur Steel Peoples Cooperative Bank Limited</item>
        <item>Emirates NBD Bank P J S C</item>
        <item>Esaf Small Finance Bank Limited</item>
        <item>Equitas Small Finance Bank Limited</item>
        <item>Export Import Bank of India</item>
        <item>Federal Bank</item>
        <item>Fincare Small Finance Bank Limited</item>
        <item>FINO Payments Bank</item>
        <item>Firstrand Bank Limited</item>
        <item>First Abu Dhabi Bank PJSC</item>
        <item>G P Parsik Bank</item>
        <item>GS Mahanagar Cooperative Bank Limited, Mumbai</item>
        <item>HDFC Bank</item>
        <item>Haryana State Cooperative Bank</item>
        <item>Himachal Pradesh State Cooperative Bank Limited</item>
        <item>HSBC Bank</item>
        <item>ICICI Bank Limited</item>
        <item>IDBI Bank</item>
        <item>IDFC First Bank Limited</item>
        <item>Idukki District Cooperative Bank Limited</item>
        <item>Indian Bank</item>
        <item>India Post Payment Bank</item>
        <item>Indusind Bank</item>
        <item>Indian Overseas Bank</item>
        <item>Industrial and Commercial Bank of China Limited</item>
        <item>Industrial Bank of Korea</item>
        <item>Irinjalakuda Town Cooperative Bank Limited</item>
        <item>Jalgaon Janata Sahkari Bank Limited</item>
        <item>Jammu and Kashmir Bank Limited</item>
        <item>Punjab National Bank</item>
        <item>State Bank of India</item>
        <item>Janakalyan Sahakari Bank Limited</item>
        <item>Union Bank of India</item>
        <item>United Bank of India</item>
        <item>United Overseas Bank</item>
        <item>Vijaya Bank</item>
        <item>Yes Bank</item>
    </string-array>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="launch_activity">Launch activity</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_can_withdraw_if_you_earn">You can withdraw if you earn</string>
    <string name="there_is">There is a\n NEW version</string>
    <string name="trading_bottom_notice">After transfer the user will receive diamonds ready to \nactivate. After you activate them the diamonds will be sent successfully.</string>
    <string name="tx_login_room"> Log in to the room </string>
    <string name="tx_publishing"> Pushing stream </string>
    <string name="tx_publish_fail"> Push stream failed </string>
    <string name="tx_stop_publish_finish"> Stop pushing stream completion </string>
    <string name="invite_your_all_friends_to_surely_get_rewards">Invite your all friends to surely get rewards</string>
    <string name="copy_this_link_and_send_to_your_friend">Copy this link and send to your friend</string>
    <string name="send_to_whatsapp">Send to Whatsapp</string>
    <string name="send_to_messenger">Send to Messenger</string>
    <string name="tap_on_my_referral_link">Tap on my referral link below to unlock a big reward and join the fun with PrivatePe \n</string>
    <string name="fu_base_debug">Resolution:\n\t%dX%d\nFPS: %d\nRender time:\n\t%dms</string>
    <string name="videoBufferType_describe">i420Mem:  I420 raw data  \n\n surface_texture:  use surface_texture </string>
    <string name="memTexture2D_describe"> asynchronous transfer texture ID, SDK will throw RGBA32 image data, can pass the pre-processed texture ID to SDK </string>
    <string name="loading"> Loading </string>
    <string name="tx_video_filter">ZegoExpressExample-FaceUnity</string>
    <string name="i420Mem_describe"> asynchronous transfer of I420 image data </string>
    <string name="surfaceTexture_describe"> passes the SurfaceTexture, and the SDK calls getSurfaceTexture of this filter to get the SurfaceTexture object </string>
    <string name="tx_filter_type">Select the type of data : </string>
    <string name="room_id_describe">roomID is the identity of a room, which is represented by a string of no more than 128 bytes in length. It is necessary to ensure that the roomID is globally unique </string>
    <string name="tx_publish_success"> push stream completion </string>
    <string name="home_function_name_beauty"> beauty </string>
    <string name="home_function_name_normal"> prop sticker </string>
    <string name="home_function_name_makeup"> beauty makeup </string>
    <string name="sorry_no_permission"> Sorry, the certificate authority or SDK you use does not include this function. </string>
    <string name="camera_dialog_title"> Warning </string>
    <string name="camera_dialog_message"> camera permissions are disabled or the camera is occupied by other applications! </string>
    <string name="camera_dialog_open"> Retry </string>
    <string name="camera_dialog_back"> log out </string>
    <string name="tx_sync_gl_texture_2d">BUFFER_TYPE_GL_TEXTURE_2D</string>
    <string name="tx_mem_gl_texture_2d">BUFFER_TYPE_HYBRID_MEM_GL_TEXTURE_2D</string>
    <string name="tx_mem_rgba32">BUFFER_TYPE_MEM</string>
    <string name="tx_asyn_i420_mem">BUFFER_TYPE_I420_MEM</string>
    <string name="tx_surface_texture">BUFFER_TYPE_SURFACE_TEXTURE</string>
    <string name="tx_has_no_fu_authpack"> faceunity ’s certificate is invalid, please replace the valid authpack file </string>
    <string name="tx_login"> Log in to the room </string>
    <string name="fu_base_is_tracking_text"> No face detected </string>
    <string name="face_shape_4"> Customize </string>
    <string name="face_shape_3_default"> default </string>
    <string name="face_shape_0_nvshen"> Goddess </string>
    <string name="face_shape_1_wanghong"> Internet celebrity </string>
    <string name="face_shape_2_ziran"> Nature </string>
    <string name="beauty_box_skin_detect"> Precise skin beauty </string>
    <string name="beauty_box_skin_detect_close"> Precision beauty skin close </string>
    <string name="agency_id">Agency ID</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="language">Language</string>
    <string name="basic_information">Basic Information</string>
    <string name="you_can_ask_you_agency_to_get_the_agency_id">* You can ask you agency to get the Agency ID</string>
</resources>