<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="clickListener"
            type="com.privatepe.host.dialogs.DialogInviteMonthlyRank" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:paddingHorizontal="15dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/round_rect_white" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_60sdp"
            android:orientation="vertical"
            android:paddingHorizontal="30dp">

            <!--
                    Use spannable text builder or html for changing text color and style in between
            -->
            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_black"
                android:text="@string/invite_your_all_friends_to_surely_get_rewards"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/copyLinklay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/round_rect_gray" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="10dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lato_regular"
                            android:text="@string/copy_this_link_and_send_to_your_friend"
                            android:textAlignment="center"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/img_copy"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/copy_viewprofile" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        android:id="@+id/tv_referralUrl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:maxLines="2"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="#C8C8C8"
                        android:textSize="11sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wtsapp_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/lato_regular"
                    android:paddingStart="20dp"
                    android:text="@string/send_to_whatsapp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_messenger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/messenger_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/lato_regular"
                    android:paddingStart="20dp"
                    android:text="@string/send_to_messenger"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>